# SlicerOrthodonticAnalysis

./: CMakeLists.txt  OrthodonticAnalysis.s4ext  README.md
OrthodonticAnalysis/: CMakeLists.txt  OrthodonticAnalysis.py
OrthodonticAnalysis/Resources/UI/: OrthodonticAnalysis.ui
